--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
-tensorflow>=2.13.0
-numpy>=1.24.3
-pandas>=2.0.3
-scikit-learn>=1.3.0
-matplotlib>=3.7.2
-seaborn>=0.12.2
-kagglehub>=0.2.0
-joblib>=1.3.2
+# Deep Learning Framework
+tensorflow==2.20.0
+keras==3.12.0
+
+# Core Scientific Computing
+numpy==2.2.6
+pandas==2.3.3
+scipy==1.15.3
+
+# Machine Learning
+scikit-learn==1.7.2
+scikit-image==0.25.2
+
+# Visualization
+matplotlib==3.10.8
+seaborn==0.13.2
+
+# Image Processing
+pillow==12.1.0
+imageio==2.37.2
 opencv-python>=4.8.0
+
+# Feature Extraction
+joblib==1.5.3
+
+# Dataset Download
+kagglehub==0.3.13
+
+# Utilities
+tqdm==4.67.1
+pyyaml==6.0.3
